# netatmo-auth-fake

./: .gitignore  Cargo.toml  config.json
src/: config.rs  main.rs
