[package]
name = "netatmo-auth-fake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"]}
axum = "*"
tracing = "*"
tracing-subscriber = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
tower-http = {version = "*", features = ["cors"]}
tower = "*"